[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Ability/Ice/ice_cube.png" type="Texture" id=1]
[ext_resource path="res://Player/Abilities/Freeze/IceCubeAnimation.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "freeze"
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.11, 0.15, 0.18, 0.21, 0.25, 0.28, 0.32, 0.36, 0.4, 0.44, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 14, 16, 17, 18, 19, 21, 22, 24, 25, 26 ]
}

[node name="IceCube" type="Sprite"]
texture = ExtResource( 1 )
vframes = 5
hframes = 6
frame = 26
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/freeze = SubResource( 2 )

[node name="FreezeTime" type="Timer" parent="."]
one_shot = true

[node name="SlowdownTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="FreezeTime" to="." method="_on_FreezeTime_timeout"]
[connection signal="timeout" from="SlowdownTime" to="." method="_on_SlowdownTime_timeout"]
